fix: java 21 solution
fix ListNode and TreeNode result null